rns-lang/tests/snapshots/parser-class_directive-header-trailing_tokens-identifier.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public HelloWorld extraIdentifier
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: Unexpected identifier after class name
   ╭─[ test_data/integration/parser/class_directive/header/trailing_tokens/identifier.ja:1:26 ]
   │
 1 │ .class public HelloWorld extraIdentifier
   │                          ───────┬───────  
   │                                 ╰───────── Unexpected identifier after class name.
   │ 
   │ Note: The class definition should end after the class name.
   │       Identifiers (method names, field names, etc.) must be used within appropriate directives like .method or as instruction arguments.
───╯
